--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -5,11 +5,11 @@
   <%= f.text_field :plan, class: 'text-input' %>
   <%= f.submit '保存' %>
 <% end %>
-<div class=calendar>
+<div class='calendar'>
   <% @week_days.each do |day| %>
     <div class='item'>
       <div class='date'>
-        <% day.month %>/<% day.day %><% day.cwday %>
+        <% day[:month] %>/<% day[:date] %>
       </div>
       <ul class='content'>
         <% if day[:plans].length != 0 %>
